removed all glitches in playerSelection

--- a/frontend/src/app/home-component/home-component.component.css
+++ b/frontend/src/app/home-component/home-component.component.css
@@ -93,11 +93,11 @@ body {
    .eris{
     background-color: rgba(17,59,99,255);
    }
-   .mighty{
-    background-color: rgba(47,50,69,255);
+   .jupiter{
+    background-color: rgba(27,47,80,255);
    }
-   .spartain{
-    background-color: rgba(23,14,31,255);
+   .ceres{
+    background-color: rgba(25,84,127,255);
    }
    .uranus{
     background-color: rgba(208,158,97,255);
