--- a/frontend/src/app/nav-bar-component/nav-bar-component.component.html
+++ b/frontend/src/app/nav-bar-component/nav-bar-component.component.html
@@ -3,8 +3,8 @@
     
     <div class="nav-container">
     <nav>
-        <a routerLink="" routerLinkActive="" >HOME</a>
-        <a routerLink="playerselection" >PlayerSelection</a>
+        <a href="home" routerLinkActive="" >HOME</a>
+        <a href="playerselection" >PlayerSelection</a>
           <a href="" routerLinkActive="active-link">SCHEDULE</a>
     
     
