--- a/frontend/src/app/home-component/home-component.component.html
+++ b/frontend/src/app/home-component/home-component.component.html
@@ -6,10 +6,10 @@
   </div>
 
   <div class="container">
-    <div class="img-holder mighty"><a href="/{{team}}"><img src="/assets/img/Mighty Mavericks.png"
-          (click)="navigateTeam('Mighty Mavericks')"></a></div>
-    <div class="img-holder spartain"><a href="/{{team}}"><img src="/assets/img/Spartan Strikers.png"
-          (click)="navigateTeam('Spartan Strikers')"></a>
+    <div class="img-holder jupiter"><a href="/{{team}}"><img src="/assets/img/Jupiter Eagles.png"
+          (click)="navigateTeam('Jupiter Eagles')"></a></div>
+    <div class="img-holder ceres"><a href="/{{team}}"><img src="/assets/img/Ceres Strikers.png"
+          (click)="navigateTeam('Ceres Strikers')"></a>
     </div>
     <div class="img-holder uranus"><a href="/{{team}}"><img src="/assets/img/Uranus Hurricans.png"
           (click)="navigateTeam('Uranus Hurricans')"></a></div>
