admin contorlls added

--- a/frontend/src/app/nav-bar-component/nav-bar-component.component.html
+++ b/frontend/src/app/nav-bar-component/nav-bar-component.component.html
@@ -3,9 +3,9 @@
     
     <div class="nav-container">
     <nav>
-        <a routerLink="" routerLinkActive="" >HOME</a>
-        <a routerLink="playerselection" >PlayerSelection</a>
-          <a href="" routerLinkActive="active-link">SCHEDULE</a>
+        <a routerLink="" routerLinkActive="home" >HOME</a>
+        <a routerLink="/playerselection" >PlayerSelection</a>
+          <a routerLink="/admincontrolls">Admin-Controlls</a>
     
     
     </nav>
