--- a/frontend/src/app/player-selection-component/player-selection-component.component.html
+++ b/frontend/src/app/player-selection-component/player-selection-component.component.html
@@ -19,11 +19,11 @@
       <option value="Bowling All-rounder">Bowling All-rounder</option>
       <option value="Batter">Batting</option>
       <option value="Bowller">Bowling</option>
-      <option value="All-rounder">All Rounder</option>
+      <option value="Wicket Keeper">Wicket Keeper</option>
     </select>
     &nbsp;
   
-    <button class="btn btn-primary pickButton"  [disabled]="teamSelectedFlag"   (click)="onPickSelection()">{{ 'Pick a lucky '}}{{ selectedItem
+    <button class="btn btn-primary pickButton"  (click)="onPickSelection()">{{ 'Pick a lucky '}}{{ selectedItem
       }}</button>
       
   </div>
