--- a/frontend/src/app/team-details-component/team-details-component.component.html
+++ b/frontend/src/app/team-details-component/team-details-component.component.html
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div>
-        <div class = "skillname">Allrounders</div>
+        <div class = "skillname">Wicket Keeper & Seeded</div>
     <div class="container">
         <div class="player-holder"  *ngFor="let player of allrounders">
         
