added delete function

--- a/frontend/src/app/home-component/home-component.component.html
+++ b/frontend/src/app/home-component/home-component.component.html
@@ -6,11 +6,10 @@
   </div>
 
   <div class="container">
-    <div class="img-holder mighty"><a href="/home/{{team}}"><img src="/assets/img/Mighty Mavericks.png"
-          (click)="navigateTeam('Mighty Mavericks')"></a></div>
-    <div class="img-holder spartain"><a href="/home/{{team}}"><img src="/assets/img/Spartan Strikers.png"
-          (click)="navigateTeam('Spartan Strikers')"></a>
-    </div>
+    <div class="img-holder jupiter"><a href="/home/{{team}}"><img src="/assets/img/Jupiter Eagles.png"
+          (click)="navigateTeam('Jupiter Eagles')"></a></div>
+    <div class="img-holder ceres"><a href="/home/{{team}}"><img src="/assets/img/Ceres Strikers.png"
+          (click)="navigateTeam('Ceres Strikers')"></a></div>
     <div class="img-holder uranus"><a href="/home/{{team}}"><img src="/assets/img/Uranus Hurricans.png"
           (click)="navigateTeam('Uranus Hurricans')"></a></div>
     <div class="img-holder mars"><a href="/home/{{team}}"><img src="/assets/img/Mars Thunders.png"
@@ -36,9 +35,11 @@
           (click)="navigateTeam('Eris Falcons')"></a></div>
 
 
+    </div>
 
-  </div>
 </body>
+  
+
 <footer>
   <div class="foo">
     <div class="fotext">TITLE SPONSOR <a href="https://www.realpage.com/"><img src="/assets/img/realpagelogo.png" h></a>
