--- a/frontend/src/app/team-details-component/team-details-component.component.html
+++ b/frontend/src/app/team-details-component/team-details-component.component.html
@@ -21,47 +21,57 @@
         </div>
 
     </div>
-    <div >
-        <div class = "skillname">Batters</div>
-    <div class="container">
-        <div class="player-holder"  *ngFor="let player of battingPlayers">
-        
-            <img src="/assets/img/batting.png">
-            <div class="data"><div class="name">{{player.name}}</div><div class="skill">{{player.skill}}</div></div>
-            
-          </div>
-          
+    <div>
+        <div class="skillname">Batters</div>
+        <div class="container">
+            <div class="player-holder" *ngFor="let player of battingPlayers">
+
+                <img src="/assets/img/batting.png">
+                <div class="data">
+                    <div class="name">{{player.name}}</div>
+                    <div class="skill">{{player.skill}}</div>
+                </div>
+
+            </div>
+
         </div>
     </div>
     <div>
-        <div class = "skillname">Wicket Keeper & Seeded</div>
-    <div class="container">
-        <div class="player-holder"  *ngFor="let player of allrounders">
-        
-            <img src="/assets/img/allrounder.png">
-            <div class="data"><div class="name">{{player.name}}</div><div class="skill">{{player.skill}}</div></div>
-            
-          </div>
-          
+        <div class="skillname">Wicket Keeper & Seeded</div>
+        <div class="container">
+            <div class="player-holder" *ngFor="let player of allrounders">
+
+                <img src="/assets/img/allrounder.png">
+                <div class="data">
+                    <div class="name">{{player.name}}</div>
+                    <div class="skill">{{player.skill}}</div>
+                </div>
+
+            </div>
+
         </div>
     </div>
     <div>
-        <div class = "skillname">Bowlers</div>
-    <div class="container">
-        <div class="player-holder"  *ngFor="let player of bowllingPlayers">
-        
-            <img src="/assets/img/bowling.png">
-            <div class="data"><div class="name">{{player.name}}</div><div class="skill">{{player.skill}}</div></div>
-            
-          </div>
-          
+        <div class="skillname">Bowlers</div>
+        <div class="container">
+            <div class="player-holder" *ngFor="let player of bowllingPlayers">
+
+                <img src="/assets/img/bowling.png">
+                <div class="data">
+                    <div class="name">{{player.name}}</div>
+                    <div class="skill">{{player.skill}}</div>
+                </div>
+
+            </div>
+
         </div>
     </div>
 </body>
 <footer>
     <div class="foo">
-      <div class="fotext">TITLE SPONSOR <a href="https://www.realpage.com/"><img src="/assets/img/realpagelogo.png" h></a>
-      </div>
-  
+        <div class="fotext">TITLE SPONSOR <a href="https://www.realpage.com/"><img src="/assets/img/realpagelogo.png"
+                    h></a>
+        </div>
+
     </div>
-  </footer>
+</footer>
