--- a/frontend/src/app/admin-controlls-component/admin-controlls-component.component.html
+++ b/frontend/src/app/admin-controlls-component/admin-controlls-component.component.html
@@ -4,7 +4,7 @@
     <div class="options">
         <div class="heading">Options</div>
         <div>
-            <button (click)="deleteCalled()" class="btn btn-outline-danger deletebuttonfromoption"> Delete player from a
+            <button class="btn btn-outline-danger deletebuttonfromoption"> Delete player from a
                 team</button>
         </div>
     </div>
@@ -49,7 +49,7 @@
                         <!-- <td>{{player.id}}</td> -->
                         <td>{{player.name}}</td>
                         <td>{{player.skill}}</td>
-                        <td><button class="btn btn-outline-danger">Delete Player from {{selectedTeam}}</button></td>
+                        <td ><button  class="btn btn-outline-danger" (click)="deleteCalled(player.teamid,player.playerid)">Delete Player from {{selectedTeam}}</button></td>
             
                         <!-- <td>{{player.gender}}</td>
                   <td>{{player.email}}</td>
