--- a/frontend/src/app/player-selection-component/player-selection-component.component.html
+++ b/frontend/src/app/player-selection-component/player-selection-component.component.html
@@ -5,11 +5,11 @@
   </div>
 </div>
 <div class="total-container">
-<app-team-selection-component (haveTeam)="teamSelectedvalue($event)"></app-team-selection-component>
+<app-team-selection-component (haveTeam)="teamSelectedvalue($event)" (addedteamemit)="removefromarray($event)" (deletedteamemit)="addtoarray($event)"></app-team-selection-component>
 
 <div class="grid-child-element">
   <div class="selector" >
-    Choose a skill from the below {{  teamSelectedFromTeamComponent}}
+    Choose a skill from the below {{  teamSelectedFromTeamComponent}} 
   </div>
   <div class="selector">
     <select [(ngModel)]="selectedItem" class="form-select picker" aria-label="Default select example"
